kustomize-rollout/overlays/prod/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-tomcat
spec:
  host: sample-tomcat-rollout.apps.rosa.akhino-modnize.6abk.p3.openshiftapps.com
